# Pipeline-TD-Labs

./: README.md
ClutterStarter/: .env  .envrc  MongoCommands.md  TODO.md  Taskfile.yml  installModule.py  podman-compose.yml  pyproject.toml  requirements.txt
ClutterStarter/clutter_base/: pyproject.toml
ClutterStarter/clutter_base/src/clutter_base/: __init__.py
ClutterStarter/clutter_base/src/clutter_base/cli/: add_folder.py  add_mesh.py  clutter_admin.py
ClutterStarter/clutter_base/src/clutter_base/db/: __init__.py  connection.py  schema.py  users.py
ClutterStarter/clutter_base/src/clutter_base/gui/: AddDialog.ui  GridViewWidget.ui  ImageDataModel.py  __init__.py  add_mesh.py  grid_view.py  login.py
ClutterStarter/clutter_base/tests/: conftest.py  test_asset_collection.py  test_db_admin.py  test_mesh_extract.py  test_ownership.py
ClutterStarter/scripts/: maya_export_script.py
MySQL/: Taskfile.yml
